AgExpression internal cleanup #649